Added a number of standard and custom bindings...

--- a/KnockoutSamples/Views/Shared/_Layout.cshtml
+++ b/KnockoutSamples/Views/Shared/_Layout.cshtml
@@ -18,14 +18,24 @@
             <div class="row-fluid">
                 <div class="span2">
                     <ul class="nav nav-list">
-                      <li class="nav-header">General</li>
+						<li class="nav-header">Standard Bindings</li>
+
                         <li><a href="~/Home/SimpleTextBinding">Simple Text Binding</a></li>
                         <li><a href="~/Home/PrimitiveValueTextBinding">Primitive Value Text Binding</a></li>
                         <li><a href="~/Home/ObservableValueTextBinding">Observable Value Text Binding</a></li>
                         <li><a href="~/Home/ComputedValueBinding">Computed Value Binding</a></li>
                         <li><a href="~/Home/VisibleBinding">Visible Binding</a></li>
-                        <li><a href="~/Home/CssBinding">Css Binding</a></li>
-                    </ul>
+						<li><a href="~/Home/CssBinding">Css Binding</a></li>
+						<li><a href="~/Home/ForEachBinding">For Each Binding</a></li>
+						<li><a href="~/Home/WithBinding">With Binding</a></li>
+						<li><a href="~/Home/HasFocusBinding">Has Focus Binding</a></li>
+						
+						<li class="nav-header">Custom Bindings</li>
+						
+						<li><a href="~/Home/SelectTextBinding">Select Text Binding</a></li>
+						<li><a href="~/Home/DatePickerBinding">Date Picker Binding</a></li>
+						<li><a href="~/Home/SpinBoxBinding">Spin Box Binding</a></li>
+					</ul>
                 </div>
                 <div class="span10">
                     <h2>@ViewBag.Title</h2>
@@ -34,9 +44,11 @@
             </div>
         </div>
         <script src="~/Scripts/jquery-1.7.2.min.js"></script>
-        <script src="~/Scripts/jquery-ui-1.8.11.min.js"></script>
+		<script src="~/Scripts/jquery-ui-1.8.11.min.js"></script>
+		<script src="~/Scripts/jquery.spinbox.js"></script>
         <script src="~/Scripts/bootstrap.js"></script>
-        <script src="~/Scripts/knockout-2.0.0.js"></script>
+		<script src="~/Scripts/knockout-2.0.0.js"></script>
+		<script src="~/Scripts/moment.min.js"></script>
         <script src="~/Scripts/global.js"></script>
         @RenderSection("Scripts", false)
     </body>
