Added a couple more samples...

--- a/KnockoutSamples/Views/Shared/_Layout.cshtml
+++ b/KnockoutSamples/Views/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
 						<li><a href="~/Home/SelectTextBinding">Select Text Binding</a></li>
 						<li><a href="~/Home/DatePickerBinding">Date Picker Binding</a></li>
 						<li><a href="~/Home/SpinBoxBinding">Spin Box Binding</a></li>
+						
+						<li class="nav-header">Advanced</li>
+						
+						<li><a href="~/Home/ReadWriteComputedValue">Read/Write Computed Value</a></li>
+						<li><a href="~/Home/UnobtrusiveKnockoutPlugin">Unobtrusive Knockout Plugin</a></li>
+
 					</ul>
                 </div>
                 <div class="span10">
@@ -48,6 +54,7 @@
 		<script src="~/Scripts/jquery.spinbox.js"></script>
         <script src="~/Scripts/bootstrap.js"></script>
 		<script src="~/Scripts/knockout-2.0.0.js"></script>
+		<script src="~/Scripts/knockout.unobtrusive.min.js"></script>
 		<script src="~/Scripts/moment.min.js"></script>
         <script src="~/Scripts/global.js"></script>
         @RenderSection("Scripts", false)
